argocd/manifests/notemark/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: notemark
  labels:
    app.kubernetes.io/name: notemark
    app.kubernetes.io/managed-by: argocd
