argocd/manifests/notemark/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notemark-ingress
  namespace: notemark
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  ingressClassName: traefik
  rules:
    - host: notemark.levangie.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: notemark
                port:
                  number: 8080
